Completed the Side Bar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="../Stylesheets/general.css">
     <link rel="stylesheet" href="../Stylesheets/header.css">
+    <link rel="stylesheet" href="../Stylesheets/main.css">
+    <link rel="stylesheet" href="../Stylesheets/side-bar.css">
 
 
     <!-- -------Loading Marat Sans Font ----- -->
@@ -25,24 +27,162 @@
 <body>
     
 
+    <!-- -----Pre header---- -->
+
+    <div class="pre-header">
+        <p>Open in app</p>
+        <i class="fa-solid fa-arrow-up-long"></i>
+    </div>
+
     <!-- -----------The Header section starts here------------- -->
+
+
     <header>
         <div class="left-section">
             <a href="index.html"><img src="../Images/Mediumlogo.svg" alt="" class="medium-logo"></a>
-            <div class="search-box">
-                <i class="fas fa-search"></i>
-                <input type="text" class="input-bar" placeholder="Search">
+            <div class="search-bar-focus">
+                <div class="search-box">
+                    <i class="fas fa-search"></i>
+                    <input type="text" class="input-bar" placeholder="Search">
+                    <div class="call-out">
+                        <i class="fa-regular fa-compass"></i>
+                        <p class="explore-topics">Explore topics</p>
+                        <i class="fa-solid fa-arrow-up-long"></i>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
         <div class="right-section">
+            <i class="fas fa-search"></i>
             <div class="new-post">
                 <i class="fa-regular fa-pen-to-square"></i>
                 <p class="write-new-post">Write</p>
             </div>
             <i class="fas fa-bell"></i>
-            <img src="../Images/0_lEmgnURWAK5Cgaxe.jpg" alt="" class="profile-picture">
+            <img src="../Images/gideon.jpg" alt="" class="header-profile-picture">
         </div>
     </header>
+
+
+    <!-- ----------Header ends here------- -->
+
+
+
+    <!-- -----------Main Section Starts here------ -->
+
+    <main>
+
+        <div class="main-page"></div>
+        <div class="side-bar">
+
+            <div class="staff-picks">
+
+                <p class="staff-picks-title">Staff Picks</p>
+                <img src="../Images/Johnbeattelle.png" alt="" class="publisher-profile-pic">
+                <p class="publisher-name">John Battelle</p>
+                <p class="article-title">Where The Sky is Blue</p>
+                <p class="date-published"><span>&star;</span> Nov 26</p>
+
+                <img src="../Images/favicon.webp" alt="" class="medium-small-logo">
+
+                <p class="blog-Brittany-Jezouit">In The Medium Blog <span>by</span> Brittany Jezouit</p>
+
+                <p class="article-title">An Introduction to academic writing on Medium</p>
+
+                <p class="date-published">3d ago</p>
+
+                <img src="../Images/Elizabeth spairs.jpg" alt="" class="publisher-profile-pic">
+                <p class="publisher-name">Elizabeth Spiers</p>
+                <p class="article-title">Five Mistakes Aspiring Opinion Writers Make</p>
+                <p class="date-published"><span>&star;</span> Nov 26</p>
+
+                <p class="full-article-list">See the full list</p>
+
+                <div class="recommended-topics">
+
+                    <p class="recommended-topics-title">Recommended topics</p>
+                    <div class="button-list">
+                        <button>Programming</button>
+                        <button>Self Improvement</button>
+                    </div>
+
+                    <div class="button-list">
+                        <button>Politics</button>
+                        <button>Data Science</button>
+                    </div>
+
+                    <div class="button-list">
+                        <button>Cryptocurrency</button>
+                        <button>Technology</button>
+                    </div>
+
+                    <div class="button-list">
+                        <button>Machine Learning</button>
+                    </div>
+
+                    <p class="more-topics">See more topics</p>
+                </div>
+            </div>
+
+            <div class="followership-section">
+
+                <p class="title">Who to follow</p>
+
+                <div class="followership-profile">
+                    <img src="../Images/Roger_Martin.png" alt="" class="followership-profile-picture">
+
+                    <div class="profile-info">
+                        <p class="profile-name">Roger Martin</p>
+                        <p class="profile-description">Professor Roger Martin is a...</p>
+                    </div>
+                    <button class="follow-btn">Follow</button>
+                </div>
+                <div class="followership-profile">
+                    <img src="../Images/1_2FN8TASJJgexL7oLAegsPA.jpg" alt="" class="followership-profile-picture">
+
+                    <div class="profile-info">
+                        <p class="profile-name">NJPW Global</p>
+                        <p class="profile-description">The latest new, information,...</p>
+                    </div>
+                    <button class="follow-btn">Follow</button>
+                </div>
+                <div class="followership-profile">
+                    <img src="../Images/0_xdvl8UTR_7jtHXYS.jpg" alt="" class="followership-profile-picture">
+
+                    <div class="profile-info">
+                        <p class="profile-name">Xien</p>
+                        <p class="profile-description">tiktok: @ashenlyx instagram:...</p>
+                    </div>
+                    <button class="follow-btn">Follow</button>
+                </div>
+
+                <p class="more-suggestions">See more suggestions</p>
+            </div>
+
+            <p class="recent-articles">Recently saved</p>
+
+            <img src="../Images/gideon.jpg" alt="" class="user-profile-picture">
+
+            <p class="user-name">Damilare Aleji</p>
+
+            <p class="user-article">Academic Success is a Mindset</p>
+
+            <p class="date-published">Jan 24, 2022</p>
+
+            <p class="see-all-articles">See all ()</p>
+
+            <button class="last-btn">Help</button>
+            <button class="last-btn">Status</button>
+            <button class="last-btn">About</button>
+            <button class="last-btn">Careers</button>
+            <button class="last-btn">Press</button>
+            <button class="last-btn">Privacy</button>
+            <button class="last-btn">Terms</button>
+            <button class="last-btn">Text to Speech</button>
+            <button class="last-btn">Teams</button>
+        </div>
+    </main>
 </body>
 </html>
