--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../Stylesheets/header.css">
     <link rel="stylesheet" href="../Stylesheets/main.css">
     <link rel="stylesheet" href="../Stylesheets/side-bar.css">
+    <link rel="stylesheet" href="../Stylesheets/mainpage.css">
 
 
     <!-- -------Loading Marat Sans Font ----- -->
@@ -74,7 +75,31 @@
 
     <main>
 
-        <div class="main-page"></div>
+        <!-- Mainpage starts here -->
+        <div class="main-page">
+            <div class="scrollable-header">
+                <button class="arrow left-arrow">&#8249;</button> <!-- Left Arrow -->
+                <div class="scroll-container">
+                    <a href="#" class="header-link">For you</a>
+                    <a href="#" class="header-link">Following</a>
+                  <a href="#" class="header-link">Writing Tips</a>
+                  <a href="#" class="header-link">Leadership</a>
+                  <a href="#" class="header-link">Writing</a>
+                  <a href="#" class="header-link">Self</a>
+                  <a href="#" class="header-link">Productivity</a>
+                  <a href="#" class="header-link">Podcast</a>
+                  <a href="#" class="header-link">Relationships</a>
+                  <a href="#" class="header-link">Books</a>
+                  <a href="#" class="header-link">Spirituality</a>
+                  <a href="#" class="header-link">Mindfulness</a>
+                  <a href="#" class="header-link">Philosophy</a>
+
+                </div>
+                <button class="arrow right-arrow">&#8250;</button> <!-- Right Arrow -->
+              </div>
+        </div>
+
+        <!-- Sidebar starts here -->
         <div class="side-bar">
 
             <div class="staff-picks">
